--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
 			   <tr>
 			    <td><a href="#">Project #1</a></td>
 			    <td><a href="#">Project #2</a></td>
-			    <td><a href="/webworld/" class="done"></a></td>
+			    <td><a href="layout/webworld/index.html" class="done"></a></td>
 			   </tr>
 			   <tr>
-			    <td><a href="blueasy" class="done"></a></td>
+			    <td><a href="layout/blueasy/index.html" class="done"></a></td>
 			    <td><a href="#">Project #5</a></td>
 			    <td><a href="#">Project #6</a></td>
 			  </tr>
