--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
 				color: rgba(255, 215, 0, .6);
 			}
 			
+			tr:nth-child(1) td:nth-child(2) {
+				background: transparent url(img/projects/prev-3.jpg) 50% 50% no-repeat;
+			}
+
 			tr:nth-child(1) td:nth-child(3) {
 				background: transparent url(img/projects/prev-3.jpg) 50% 50% no-repeat;
 			}
@@ -110,7 +114,7 @@
 				<table border="1">
 			   <tr>
 			    <td><a href="#">Project #1</a></td>
-			    <td><a href="#">Project #2</a></td>
+			    <td><a href="layout/promalpmolot/index.html" class="done"></a></td>
 			    <td><a href="layout/webworld/index.html" class="done"></a></td>
 			   </tr>
 			   <tr>
