--- a/index.html
+++ b/index.html
@@ -94,21 +94,25 @@
 				background: transparent url(img/projects/prev-4.jpg) 50% 50% no-repeat;
 			}
 
+			tr:nth-child(2) td:nth-child(2) {
+				background: transparent url(img/projects/prev-5.jpg) 50% 50% no-repeat;
+			}
+
 			@-webkit-keyframes shadow {
 				0%, 100% { -webkit-box-shadow: 0 0 15px rgba(100, 100, 100, .7); } 
-				50% { box-shadow: 0 0 35px rgba(100, 100, 100, .7); }
+				50% { box-shadow: 0 0 40px rgba(100, 100, 100, .75); }
 			}
 			@-moz-keyframes shadow {
 				0%, 100% { -webkit-box-shadow: 0 0 15px rgba(100, 100, 100, .7); } 
-				50% { box-shadow: 0 0 35px rgba(100, 100, 100, .7); }
+				50% { box-shadow: 0 0 40px rgba(100, 100, 100, .75); }
 			}
 			@-o-keyframes shadow {
 				0%, 100% { -webkit-box-shadow: 0 0 15px rgba(100, 100, 100, .7); } 
-				50% { box-shadow: 0 0 35px rgba(100, 100, 100, .7); }
+				50% { box-shadow: 0 0 40px rgba(100, 100, 100, .75); }
 			}
 			@keyframes shadow {
 				0%, 100% { -webkit-box-shadow: 0 0 15px rgba(100, 100, 100, .7); } 
-				50% { box-shadow: 0 0 35px rgba(100, 100, 100, .7); }
+				50% { box-shadow: 0 0 40px rgba(100, 100, 100, .75); }
 			}			
 			
 			.ttl {
@@ -136,7 +140,7 @@
 			   </tr>
 			   <tr>
 			    <td class="got"><a href="layout/blueasy/index.html" class="done"></a></td>
-			    <td><p>Project #5</p></td>
+			    <td class="got"><a href="layout/fooseshoes/index.html" class="done"></a></td>
 			    <td><p>Project #6</p></td>
 			  </tr>
 			  <tr>
