--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
 				background: transparent url(img/projects/prev-5.jpg) 50% 50% no-repeat;
 			}
 
+			tr:nth-child(2) td:nth-child(3) {
+				background: transparent url(img/projects/prev-6.jpg) 50% 50% no-repeat;
+			}
+
 			@-webkit-keyframes shadow {
 				0%, 100% { -webkit-box-shadow: 0 0 15px rgba(100, 100, 100, .7); } 
 				50% { box-shadow: 0 0 40px rgba(100, 100, 100, .75); }
@@ -141,7 +145,7 @@
 			   <tr>
 			    <td class="got"><a href="layout/blueasy/index.html" class="done"></a></td>
 			    <td class="got"><a href="layout/fooseshoe/index.html" class="done"></a></td>
-			    <td><p>Project #6</p></td>
+			    <td class="got"><a href="layout/carrental/index.html" class="done"></a></td>
 			  </tr>
 			  <tr>
 			    <td><p>Project #7</p></td>
