--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				display: block;
 		    position: absolute;
 		    width: 100%;
-		    height: 100%;
+		    height: 300px;
 		    top: 0;
 		    left: 0;
 			}
