--- a/index.html
+++ b/index.html
@@ -206,13 +206,13 @@
 
 				<table border="1">
 			   <tr>
-			    <td class="got"><a href="http://pobeda116.ru/" class="done"></a></td>
-			    <td class="got"><a href="http://negodiaev.ml/" class="done"></a></td> 
+			    <td class="got"><a href="http://pobeda116.ru/" class="done" target="_blank"></a></td>
+			    <td class="got"><a href="http://negodiaev.ml/" class="done" target="_blank"></a></td> 
 			    <td class="got"><a href="layout/carrental/index.html" class="done"></a></td>
 			   </tr>
 			   <tr>
 			    <td class="got"><a href="layout/fooseshoe/index.html" class="done"></a></td>
-			    <td class="got"><a href="http://ptk-astoria.ru/" class="done"></a></td><td class="got"><a href="layout/rubos/index.html" class="done"></a></td>
+			    <td class="got"><a href="http://ptk-astoria.ru/" class="done" target="_blank"></a></td><td class="got"><a href="layout/rubos/index.html" class="done"></a></td>
 			  </tr>
 			  <tr>
 			    <td class="got"><a href="layout/blueasy/index.html" class="done"></a></td>	    
