The Rubos link has been changed

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 			    
 			  </tr>
 			  <tr>
-			    <td class="got"><a href="layout/rubos/index.html" class="done" target="_blank"></a></td>
+			    <td class="got"><a href="http://xn--80acxbbtfeeh7a5dxb.xn--80adxhks/" class="done" target="_blank"></a></td>
 			    <td class="got"><a href="layout/blueasy/index.html" class="done" target="_blank"></a></td>	    
 			    <td class="got"><a href="layout/webworld/index.html" class="done" target="_blank"></a></td>
 			    
