--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>Победа</h3>  
-						<p>Вёрстка сайта для центра правового обслуживания, предоставляющего услуги юридического характера для бизнеса и физических лиц.</p>  
+						<p>Вёрстка сайта для центра правового обслуживания, предоставляющего услуги юридического характера для бизнеса и физических лиц</p>  
 						<a href="http://pobeda116.ru/" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>Смокинги</h3>  
-						<p>Вёрстка сайта компании по прокату мужских свадебных костюмов и смокингов.</p>  
+						<p>Вёрстка сайта компании по прокату мужских свадебных костюмов и смокингов</p>  
 						<a href="layout/smoking/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
@@ -42,21 +42,21 @@
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>ПромАльпМолот</h3>  
-						<p>Создание сайта компании, предоставляющей услуги промышленного альпинизма.</p>  
+						<p>Создание сайта компании, предоставляющей услуги промышленного альпинизма</p>  
 						<a href="layout/promalpmolot1/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>Master Car Rentals</h3>  
-						<p>Пример адаптивной вёрстки сайта компании по прокату автомобилей. Присутствует анимация основных элементов и модальные окна.</p>  
+						<p>Пример адаптивной вёрстки сайта компании по прокату автомобилей с модальными окнами и анимацией основных элементов</p>  
 						<a href="layout/carrental/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>Fooseshoes</h3>  
-						<p>Пример вёрстки главной страницы интернет-магазина мужской обуви. Присутствуют модальные окна и js-элементы.</p>  
+						<p>Пример вёрстки главной страницы интернет-магазина мужской обуви с модальными окнами и js-элементами</p>
 						<a href="layout/fooseshoe/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
@@ -66,21 +66,21 @@
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>Астория</h3>  
-						<p>Вёрстка и установка на CMS Wordpress сайта по изготовлению, продаже, монтажу и сервисному обслуживанию всех видов оконных и дверных конструкций.</p>  
+						<p>Вёрстка и установка на CMS Wordpress сайта по изготовлению, продаже, монтажу и сервисному обслуживанию всех видов оконных и дверных конструкций</p>  
 						<a href="layout/astoria/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>Рубос</h3>  
-						<p>Вёрстка сайта спортивного клуба по рукопашному бою.</p>  
+						<p>Вёрстка сайта спортивного клуба по рукопашному бою</p>  
 						<a href="http://xn--80acxbbtfeeh7a5dxb.xn--80adxhks/" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>BluEasy</h3>  
-						<p>Пример вёрстки сайта портфолио в стиле Langing Page с использованием анимационных эффектов и формой обратной связи.</p>  
+						<p>Пример вёрстки сайта портфолио в стиле Langing Page с использованием анимационных эффектов и формой обратной связи</p>  
 						<a href="layout/blueasy/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
@@ -90,14 +90,14 @@
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>WebWorld</h3>  
-						<p>Вёрстка адаптивного сайта портфолио с использованием карусели, анимационных эффектов и наличием модальных окон.</p>  
+						<p>Вёрстка адаптивного сайта портфолио с использованием карусели, анимационных эффектов и наличием модальных окон</p>  
 						<a href="layout/webworld/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>MoDesign</h3>  
-						<p>Вёрстка сайта мобильных приложений, адаптированного под любые устройства.</p>  
+						<p>Вёрстка сайта мобильных приложений, адаптированного под любые устройства</p>  
 						<a href="layout/mobapps/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
