Added SmartKart website

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 		   <tr>
 		    <td class="got">
 		    	<div class="td-shadow">
+	    			<h3>SmartKart</h3>  
+						<p>Вёрстка адаптивного сайта для картинг-центра</p>  
+						<a href="layout/smartkart/index.html" class="info-link" target="_blank">Посмотреть</a>
+					</div> 
+		    </td>
+		    <td class="got">
+		    	<div class="td-shadow">
 	    			<h3>Лесные Технологии</h3>  
 						<p>Вёрстка адаптивного многостраничного сайта компании по производству пиломатериалов и изделий из древесины</p>  
 						<a href="layout/lesteh/index.html" class="info-link" target="_blank">Посмотреть</a>
@@ -29,6 +36,9 @@
 						<a href="http://pobeda116.ru/" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
+		   </tr>
+
+		   <tr>
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>Смокинги</h3>  
@@ -36,9 +46,6 @@
 						<a href="layout/smoking/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
-		   </tr>
-
-		   <tr>
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>ПромАльпМолот</h3>  
@@ -53,16 +60,16 @@
 						<a href="layout/carrental/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
-		    <td class="got">
+		  </tr>
+
+		  <tr>
+		  	<td class="got">
 		    	<div class="td-shadow">
 	    			<h3>Fooseshoes</h3>  
 						<p>Пример вёрстки главной страницы интернет-магазина мужской обуви с модальными окнами и js-элементами</p>
 						<a href="layout/fooseshoe/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
-		  </tr>
-
-		  <tr>
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>Астория</h3>  
@@ -76,7 +83,10 @@
 						<p>Вёрстка сайта спортивного клуба по рукопашному бою</p>  
 						<a href="http://xn--80acxbbtfeeh7a5dxb.xn--80adxhks/" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
-		    </td>
+		    </td>   
+		  </tr>
+
+		  <tr>
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>BluEasy</h3>  
@@ -84,21 +94,11 @@
 						<a href="layout/blueasy/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
-		  </tr>
-
-		  <tr>
 		    <td class="got">
 		    	<div class="td-shadow">
 	    			<h3>WebWorld</h3>  
 						<p>Вёрстка адаптивного сайта портфолио с использованием карусели, анимационных эффектов и наличием модальных окон</p>  
 						<a href="layout/webworld/index.html" class="info-link" target="_blank">Посмотреть</a>
-					</div> 
-		    </td>
-		    <td class="got">
-		    	<div class="td-shadow">
-	    			<h3>MoDesign</h3>  
-						<p>Вёрстка сайта мобильных приложений, адаптированного под любые устройства</p>  
-						<a href="layout/mobapps/index.html" class="info-link" target="_blank">Посмотреть</a>
 					</div> 
 		    </td>
 		    <td><p>Project #12</p></td>
