--- a/new/index.html
+++ b/new/index.html
@@ -4,13 +4,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
-	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="shortcut icon" href="./favicon.ico">
 	<meta name="description" content="description">
 	<meta name="keywords" content="keywords">
-	<link rel="apple-touch-icon" href="apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" href="./apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="./apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="./apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="./apple-touch-icon-144x144.png">
 	<meta name="msapplication-TileImage" content="og-logo.png">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="application-name" content="">
@@ -23,7 +23,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="format-detection" content="address=no">
 	<title>Portfolio | Home</title>
-	<link href="/css/styles.css" rel="stylesheet">
+	<link href="./css/styles.css" rel="stylesheet">
 	<!--[if lt IE 9]>
     <script src="js/html5.js"></script>
     <script src="js/respond.js"></script>
@@ -44,8 +44,8 @@
 	  Footer content
 	</footer>
 	<!-- /.page-footer -->
-	<!-- <script src="/js/jquery.js"></script> -->
-	<!-- <script src="/js/library.js"></script> -->
-	<script src="/js/main.js"></script>
+	<!-- <script src="./js/jquery.js"></script> -->
+	<!-- <script src="./js/library.js"></script> -->
+	<script src="./js/main.js"></script>
 </body>
 </html>
