Created a list of portfolio items

--- a/new/index.html
+++ b/new/index.html
@@ -32,16 +32,50 @@
 <body class="home">
 	<main class="main">
 		<header class="page-header">
-		  Header content
+		  <div class="grid-container">
+		    <div class="grid-100">
+		      Header content
+		    </div>
+		    <!-- grid -->
+		  </div>
+		  <!-- /.grid-container -->
 		</header>
 		<!-- /.page-header -->
-		<h1>Title</h1>
-		<p>Paragraph...</p>
-		<a href="#">Link</a>
+		<div class="grid-container">
+			<div class="grid-100">
+				<h1>Projects</h1>
+			</div>
+			<!-- grid -->
+		</div>
+		<!-- /.grid-container -->
+		<div class="grid-container">
+			<div class="grid-100">
+				<p>Projects info</p>
+			</div>
+			<!-- grid -->
+		</div>
+		<!-- /.grid-container -->
+
+
+		<div class="projects">
+			<div id="projects-container" class="grid-container">
+
+			</div>
+			<!-- /.grid-container -->
+		</div>
+		<!-- /.projects -->
+
+
 	</main>
 	<!-- /.main -->
 	<footer class="page-footer">
-	  Footer content
+	  <div class="grid-container">
+	    <div class="grid-100">
+	      Footer content
+	    </div>
+	    <!-- grid -->
+	  </div>
+	  <!-- /.grid-container -->
 	</footer>
 	<!-- /.page-footer -->
 	<!-- <script src="./js/jquery.js"></script> -->
