Updated paths to sources

--- a/new/projects/sportshold/index.html
+++ b/new/projects/sportshold/index.html
@@ -4,13 +4,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
-	<link rel="shortcut icon" href="./favicon.ico">
+	<link rel="shortcut icon" href="favicon.ico">
 	<meta name="description" content="description">
 	<meta name="keywords" content="keywords">
-	<link rel="apple-touch-icon" href="./apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="./apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="./apple-touch-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="./apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.png">
 	<meta name="msapplication-TileImage" content="og-logo.png">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="application-name" content="">
@@ -23,10 +23,10 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="format-detection" content="address=no">
 	<title>Sportshold | Home</title>
-	<link href="./css/styles.css" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
 	<!--[if lt IE 9]>
-    <script src="./js/html5.js"></script>
-    <script src="./js/respond.js"></script>
+    <script src="js/html5.js"></script>
+    <script src="js/respond.js"></script>
   <![endif]-->
 </head>
 <body class="home">
@@ -147,7 +147,7 @@
 					<!-- grid -->
 				</div>
 				<!-- /.grid-container -->
-				<img src="./images/hero/hero-1.png" class="content-image" alt="Nike Air Max">
+				<img src="images/hero/hero-1.png" class="content-image" alt="Nike Air Max">
 			</div>
 			<!-- /.content -->
 		</div>
@@ -156,7 +156,7 @@
 			<div class="grid-container">
 				<div class="grid-50 tablet-grid-100">
 					<div class="item item-full item-dark">
-						<img src="./images/promo/1.png" alt="Nike Kyrie 3">
+						<img src="images/promo/1.png" alt="Nike Kyrie 3">
 						<div class="content">
 							<div class="title-wrap">
 								<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveaspectratio="xMidYMid"
@@ -192,7 +192,7 @@
 				<div class="grid-50 tablet-grid-100 grid-parent">
 					<div class="grid-100">
 						<div class="item item-half item-secondary">
-							<img src="./images/promo/2.png" alt="New arrivals">
+							<img src="images/promo/2.png" alt="New arrivals">
 							<div class="content">
 								<div class="title">Check out the
 									<span class="highlighted">new arrivals</span>
@@ -205,7 +205,7 @@
 					<!-- grid -->
 					<div class="grid-50 tablet-grid-50">
 						<div class="item item-quarter item-dark"
-								 style="background-image: url(./images/promo/3.jpg)">
+								 style="background-image: url(images/promo/3.jpg)">
 							<div class="content">
 								<a href="#" class="content-link">
 									<div class="title title-bottom">Best for
@@ -219,7 +219,7 @@
 					<!-- grid -->
 					<div class="grid-50 tablet-grid-50">
 						<div class="item item-quarter item-gray"
-								 style="background-image: url(./images/promo/4.jpg)">
+								 style="background-image: url(images/promo/4.jpg)">
 							<div class="content">
 								<a href="#" class="content-link">
 									<div class="title title-gray">Feel
@@ -261,7 +261,7 @@
 									<div class="discount">-25%</div>
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/1.jpg)">
+										style="background-image: url(images/products/1.jpg)">
 											<a href="#">
 												<div class="current-price">$45.00</div>
 												<div class="old-price">$60.00</div>
@@ -281,7 +281,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/2.jpg)">
+										style="background-image: url(images/products/2.jpg)">
 											<a href="#">
 												<div class="current-price">$55.00</div>
 											</a>
@@ -301,7 +301,7 @@
 									<div class="discount">-25%</div>
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/3.jpg)">
+										style="background-image: url(images/products/3.jpg)">
 											<a href="#">
 												<div class="current-price">$60.00</div>
 												<div class="old-price">$80.00</div>
@@ -321,7 +321,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/4.jpg)">
+										style="background-image: url(images/products/4.jpg)">
 											<a href="#">
 												<div class="current-price">$50.00</div>
 											</a>
@@ -340,7 +340,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/5.jpg)">
+										style="background-image: url(images/products/5.jpg)">
 											<a href="#">
 												<div class="current-price">$90.00</div>
 											</a>
@@ -360,7 +360,7 @@
 									<div class="discount">-25%</div>
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/6.jpg)">
+										style="background-image: url(images/products/6.jpg)">
 											<a href="#">
 												<div class="current-price">$50.00</div>
 												<div class="old-price">$100.00</div>
@@ -380,7 +380,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/7.jpg)">
+										style="background-image: url(images/products/7.jpg)">
 											<a href="#">
 												<div class="current-price">$40.00</div>
 											</a>
@@ -399,7 +399,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/8.jpg)">
+										style="background-image: url(images/products/8.jpg)">
 											<a href="#">
 												<div class="current-price">$80.00</div>
 											</a>
@@ -424,7 +424,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/2.jpg)">
+										style="background-image: url(images/products/2.jpg)">
 											<a href="#">
 												<div class="current-price">$55.00</div>
 											</a>
@@ -444,7 +444,7 @@
 									<div class="discount">-25%</div>
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/1.jpg)">
+										style="background-image: url(images/products/1.jpg)">
 											<a href="#">
 												<div class="current-price">$45.00</div>
 												<div class="old-price">$60.00</div>
@@ -464,7 +464,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/4.jpg)">
+										style="background-image: url(images/products/4.jpg)">
 											<a href="#">
 												<div class="current-price">$50.00</div>
 											</a>
@@ -484,7 +484,7 @@
 									<div class="discount">-25%</div>
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/3.jpg)">
+										style="background-image: url(images/products/3.jpg)">
 											<a href="#">
 												<div class="current-price">$60.00</div>
 												<div class="old-price">$80.00</div>
@@ -505,7 +505,7 @@
 									<div class="discount">-25%</div>
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/6.jpg)">
+										style="background-image: url(images/products/6.jpg)">
 											<a href="#">
 												<div class="current-price">$50.00</div>
 												<div class="old-price">$100.00</div>
@@ -525,7 +525,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/5.jpg)">
+										style="background-image: url(images/products/5.jpg)">
 											<a href="#">
 												<div class="current-price">$90.00</div>
 											</a>
@@ -544,7 +544,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/8.jpg)">
+										style="background-image: url(images/products/8.jpg)">
 											<a href="#">
 												<div class="current-price">$80.00</div>
 											</a>
@@ -563,7 +563,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/7.jpg)">
+										style="background-image: url(images/products/7.jpg)">
 											<a href="#">
 												<div class="current-price">$40.00</div>
 											</a>
@@ -588,7 +588,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/8.jpg)">
+										style="background-image: url(images/products/8.jpg)">
 											<a href="#">
 												<div class="current-price">$80.00</div>
 											</a>
@@ -607,7 +607,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/7.jpg)">
+										style="background-image: url(images/products/7.jpg)">
 											<a href="#">
 												<div class="current-price">$40.00</div>
 											</a>
@@ -627,7 +627,7 @@
 									<div class="discount">-25%</div>
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/6.jpg)">
+										style="background-image: url(images/products/6.jpg)">
 											<a href="#">
 												<div class="current-price">$50.00</div>
 												<div class="old-price">$100.00</div>
@@ -647,7 +647,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/5.jpg)">
+										style="background-image: url(images/products/5.jpg)">
 											<a href="#">
 												<div class="current-price">$90.00</div>
 											</a>
@@ -666,7 +666,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/4.jpg)">
+										style="background-image: url(images/products/4.jpg)">
 											<a href="#">
 												<div class="current-price">$50.00</div>
 											</a>
@@ -686,7 +686,7 @@
 									<div class="discount">-25%</div>
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/3.jpg)">
+										style="background-image: url(images/products/3.jpg)">
 											<a href="#">
 												<div class="current-price">$60.00</div>
 												<div class="old-price">$80.00</div>
@@ -706,7 +706,7 @@
 								<div class="product">
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/2.jpg)">
+										style="background-image: url(images/products/2.jpg)">
 											<a href="#">
 												<div class="current-price">$55.00</div>
 											</a>
@@ -726,7 +726,7 @@
 									<div class="discount">-25%</div>
 									<div class="content">
 										<div class="image"
-										style="background-image: url(./images/products/1.jpg)">
+										style="background-image: url(images/products/1.jpg)">
 											<a href="#">
 												<div class="current-price">$45.00</div>
 												<div class="old-price">$60.00</div>
@@ -756,12 +756,12 @@
 			<div class="grid-container">
 				<div class="grid-100">
 					<ul>
-						<li><img src="./images/brands/1.png" alt=""></li>
-						<li><img src="./images/brands/2.png" alt=""></li>
-						<li><img src="./images/brands/3.png" alt=""></li>
-						<li><img src="./images/brands/4.png" alt=""></li>
-						<li><img src="./images/brands/5.png" alt=""></li>
-						<li><img src="./images/brands/6.png" alt=""></li>
+						<li><img src="images/brands/1.png" alt=""></li>
+						<li><img src="images/brands/2.png" alt=""></li>
+						<li><img src="images/brands/3.png" alt=""></li>
+						<li><img src="images/brands/4.png" alt=""></li>
+						<li><img src="images/brands/5.png" alt=""></li>
+						<li><img src="images/brands/6.png" alt=""></li>
 					</ul>
 				</div>
 				<!-- grid -->
@@ -770,7 +770,7 @@
 		</div>
 		<!-- /.brands -->
 		<div class="testimonials"
-				 style="background-image: url(./images/testimonials/bg-testimonials.jpg)">
+				 style="background-image: url(images/testimonials/bg-testimonials.jpg)">
 			<div class="tabs tabs-testimonials">
 				<div class="links">
 					<div class="grid-container">
@@ -780,7 +780,7 @@
 									<li>
 										<a href="#testimonial-1" class="testimonial-author">
 											<div class="image"
-											style="background-image: url(./images/testimonials/1.jpg)"></div>
+											style="background-image: url(images/testimonials/1.jpg)"></div>
 											<div class="name">Christopher Atkins</div>
 										</a>
 										<div class="rating">
@@ -816,7 +816,7 @@
 									<li class="active">
 										<a href="#testimonial-2" class="testimonial-author">
 											<div class="image"
-											style="background-image: url(./images/testimonials/1.jpg)"></div>
+											style="background-image: url(images/testimonials/1.jpg)"></div>
 											<div class="name">Andrew Ferraccioli</div>
 										</a>
 										<div class="rating">
@@ -852,7 +852,7 @@
 									<li>
 										<a href="#testimonial-3" class="testimonial-author">
 											<div class="image"
-											style="background-image: url(./images/testimonials/1.jpg)"></div>
+											style="background-image: url(images/testimonials/1.jpg)"></div>
 											<div class="name">Sandra Jensen</div>
 										</a>
 										<div class="rating">
@@ -927,7 +927,7 @@
 				<div class="grid-33 tablet-grid-33 mobile-grid-100">
 					<article class="article">
 						<div class="background"
-								 style="background-image: url(./images/news/article-1.jpg)"></div>
+								 style="background-image: url(images/news/article-1.jpg)"></div>
 						<div class="content">
 							<div class="date">Dec 27, 2017</div>
 							<h3 class="title">
@@ -955,7 +955,7 @@
 				<div class="grid-33 tablet-grid-33 mobile-grid-100">
 					<article class="article">
 						<div class="background"
-								 style="background-image: url(./images/news/article-2.jpg)"></div>
+								 style="background-image: url(images/news/article-2.jpg)"></div>
 						<div class="content">
 							<div class="date">Dec 25, 2017</div>
 							<h3 class="title">
@@ -983,7 +983,7 @@
 				<div class="grid-33 tablet-grid-33 mobile-grid-100">
 					<article class="article">
 						<div class="background"
-								 style="background-image: url(./images/news/article-3.jpg)"></div>
+								 style="background-image: url(images/news/article-3.jpg)"></div>
 						<div class="content">
 							<div class="date">Dec 22, 2017</div>
 							<h3 class="title">
@@ -1382,9 +1382,9 @@
 	  <!-- /.footer-bottom -->
 	</footer>
 	<!-- /.page-footer -->
-	<!-- <script src="./js/jquery.js"></script> -->
-	<!-- <script src="./js/library.js"></script> -->
-	<script src="./js/polyfills.js"></script>
-	<script src="./js/main.js"></script>
+	<!-- <script src="js/jquery.js"></script> -->
+	<!-- <script src="js/library.js"></script> -->
+	<script src="js/polyfills.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
